[fix] z-index

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body {
 .popup-container {
     display: none;
     position: fixed;
-    z-index: 999;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
